fixed layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 
 *{
-  box-sizing: content-box;
+  box-sizing: border-box;
   margin:0;
   padding:0;
-  border: 1px solid red !important;  
 }
 
 body {
@@ -24,7 +23,7 @@ h1{
 }
 
 .App{
-  width: 100vh;
+  width: 100%;
   height: 100vh;
   position:relative;
   background-color: rgba(0,0,0,.4);
@@ -41,6 +40,7 @@ h1{
   left:0;
   z-index:-1;
   background-size:cover;
+  
 }
 
 .App .search{
@@ -57,11 +57,13 @@ h1{
   border-radius:25px;
   border: 3px solid rgba(255, 255, 255, 0.8);
   background: rgba(255,255,255,0.1);
+
 }
 
 .App input[type=text]{
   text-align: left;
   padding-left:.4rem;
+  
 }
 
 ::placeholder{
@@ -71,8 +73,8 @@ h1{
 }
 
 .container{
-  max-width: 700;
-  height: 100%;
+  max-width: 700px;
+  height: 600px;
   margin: auto;
   padding: 0 1rem; 
   position: relative;
@@ -80,11 +82,13 @@ h1{
   display: flex;
   flex-direction:column;
   justify-content: space-between;
+  
 }
 
 .App.top{
   width: 100%;
   margin: 1 rem auto;
+  
 }
 
 .App .description{
@@ -97,20 +101,14 @@ h1{
 .App .bottom{
   display:flex;
   justify-content: space-evenly;
+  align-items: center;
   text-align: center;
   width: 100%;
   margin: 1rem auto;
   padding:1rem;
   border-radius:12px;
-  background-color:rgba(255,255,255,0.2);
+  background-color:rgba(63, 62, 62, 0.2);
 }
-
-/* .App .SPF{
-  position:absolute;
-  right:100px;
-  bottom:30px;
-  
-} */
 
 
 .bold{
